test/fixtures/config/theming/error/unknownCompletionType/.gulp.js
module.exports = {
  log: {
    msgs: {
      error: {
        unknownCompletionType: 'GULP COMPLETION TYPE {Type: {1}} IS NOT FOUND',
      },
    },
    theme: {
      Type: '**{1}**',
    },
  },
};
